REGRESSION: can select text of an input button https://bugs.webkit.org/show_bug.cgi?id=13624

Patch by Parag Radke <parag@motorola.com> on 2012-03-23
Reviewed by Ryosuke Niwa.

Source/WebCore:

Text in a button should never have a selection background of its own painted
but if the button is inside an editable area, then the whole button should
have it's selection background painted.

Test: editing/selection/selection-button-text.html

* rendering/RenderButton.h:
Added implementation for the virtual function canBeSelectionLeaf()
which returns true if the button renderer is editable, false other wise.
* rendering/RenderTextFragment.h:
Added implementation for the virtual function canBeSelectionLeaf()
which returns true if the text fragment renderer is editable, false other wise.

LayoutTests:

Added a pixel test case to test the selection background for button label text.

* editing/selection/selection-button-text.html: Added.
* platform/gtk/editing/selection/selection-button-text-expected.png: Added.
* platform/gtk/editing/selection/selection-button-text-expected.txt: Added.


Canonical link: https://commits.webkit.org/99419@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111946 268f45cc-cd09-0410-ab3c-d52691b4dbfc