Source/WebCore/rendering/RenderButton.h
@@ -40,6 +40,8 @@ public:
     virtual const char* renderName() const { return "RenderButton"; }
     virtual bool isRenderButton() const { return true; }
 
+    virtual bool canBeSelectionLeaf() const OVERRIDE { return node() && node()->rendererIsEditable(); }
+
     virtual void addChild(RenderObject* newChild, RenderObject *beforeChild = 0);
     virtual void removeChild(RenderObject*);
     virtual void removeLeftoverAnonymousBlock(RenderBlock*) { }
